# morpheus-kyc-ui

./: .gitmodules  README.md  build-libraries.sh
common/: README.md  pubspec.yaml
common/lib/demo/: vault.dart
common/lib/sdk/: authority_private_api.dart  authority_private_api.g.dart  authority_public_api.dart  authority_public_api.g.dart  content_resolver.dart  http_tools.dart  inspector_private_api.dart  inspector_public_api.dart  inspector_public_api.g.dart  io.dart  io.g.dart  (+4 more)
common/test/: content_test.dart
inspector/: README.md  pubspec.yaml
inspector/lib/: main.dart  shared_prefs.dart  view_model.dart  view_model.g.dart  view_model_provider.dart
inspector/test/: widget_test.dart
inspector/web/: index.html
mock-server/: package-lock.json  package.json  tsconfig.json
mock-server/src/: confirmedEUCitizenClaimSchema.json  confirmedEUCitizenEvidenceSchema.json  confirmedEUCitizenSchema.json  main.ts  processes.json  signedWitnessStatement.json
native_sdk/: README.md  pubspec.yaml
user/: README.md  build-libraries.sh  pubspec.yaml
user/lib/: app_model.dart  create-witness-request.dart  home.dart  main.dart  main_ffi.dart  morpheus-color.dart  scan-qr.dart  shared_prefs.dart
user/native_sdk/: pubspec.yaml
user/rust/: Cargo.toml
user/rust_c/: Cargo.toml
user/rust_c/src/: lib.rs
user/rust_wasm/: Cargo.toml  build.sh
user/test/: widget_test.dart
user/web/: index.html
witness/: README.md  pubspec.yaml
witness/lib/: main.dart  shared_prefs.dart
witness/native_sdk/: README.md
witness/test/: widget_test.dart
witness/web/: index.html
(+202 files in other folders)
