[package]
name = "dart_rust_integration_test"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>"]
license = "LGPL-3.0-or-later"
edition = "2018"

[dependencies]
lazy_static = "*"
tokio = { version="*", features = ["full"] }

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }
android_logger = "0.5"

[lib]
name = "native_add"
crate-type = ["rlib","cdylib"]
